Sign Here Please/objects/Bundle_Component__c.object
<CustomObject>
    <fields>
        <fullName>Bundle_Name__c</fullName>
        <formula>Bundle__r.Bundle_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bundle Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bundle__c</fullName>
        <label>Bundle</label>
        <referenceTo>Bundle__c</referenceTo>
        <relationshipLabel>Bundle Components</relationshipLabel>
        <relationshipName>Bundle_Components</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_C__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product-C</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Bundle Components</relationshipLabel>
        <relationshipName>Bundle_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <label>Bundle Component</label>
    <nameField>
        <displayFormat>bc-{0}</displayFormat>
        <label>Bundle Component Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bundle Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>